--- a/css/master.css
+++ b/css/master.css
@@ -6,15 +6,31 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+h1{
+  font-size: 48px;
+  letter-spacing: 12px;
+}
 body {
   font-family: 'Poller One', cursive;
 }
 nav {
   background-color: #7BAE5C;
   text-align: center;
+  padding-top: 40px;
+  padding-bottom: 30px;
+}
+nav ul{
+  padding-top: 10px;
+  font-family: 'Sen', sans-serif;
+  font-size: 22px;
+  font-weight: 700;
 }
 nav ul li{
   display: inline;
   padding-right: 50px;
   padding-left: 50px;
+}
+nav ul li a{
+  text-decoration: none;
+  color: inherit;
 }
