--- a/css/master.css
+++ b/css/master.css
@@ -34,3 +34,34 @@ nav ul li a{
   text-decoration: none;
   color: inherit;
 }
+footer{
+  text-align: center;
+  font-family: 'Sen', sans-serif;
+  background-color: #8f8f8f;
+  color: white;
+  padding-bottom: 30px;
+  padding-top: 30px;
+  position: fixed;
+  width: 100%;
+  left: 0%;
+  bottom: 0%;
+}
+footer p{
+  padding-top: 15px;
+  font-size: 14px;
+}
+footer ul{
+  padding-top: 10px;
+  font-family: 'Sen', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+}
+footer ul li{
+  display: inline;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+footer ul li a{
+  text-decoration: none;
+  color: inherit;
+}
