--- a/css/master.css
+++ b/css/master.css
@@ -42,8 +42,58 @@ nav ul li a{
 }
 #banner-homepage img{
   height: 450px;
-  width: 988px;
-  object-fit: fill;
+  width: 90%;
+  object-fit: cover;
+}
+#description-boxes{
+  font-family: 'Sen', sans-serif;
+  margin: 50px auto;
+  width: 80%;
+  text-alig: center;
+}
+.row{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-flow: wrap;
+}
+.box-header h1{
+  font-size: 35px;
+  letter-spacing: 0px;
+}
+.box{
+  width: 30%;
+  background: white;
+  margin-bottom: 50px;
+  transition: 0.7s;
+}
+.box:hover{
+  transform: scale(1.05);
+}
+.box-header{
+  text-align: center;
+  padding: 20px 10px;
+  color: #7BAE5C;
+}
+.box-body{
+  padding: 30px 20px;
+  text-align: center;
+  font-size: 20px;
+}
+.box-body .btn{
+  display: block;
+  color: white;
+  text-align: center;
+  background: #7BAE5C;
+  margin-top: 30px;
+  text-decoration: none;
+  padding: 10px 5px;
+  opacity: 0.7;
+  transition: 0.35s;
+  bottom: 20%;
+}
+.box-body .btn:hover{
+  opacity: 1;
 }
 footer{
   text-align: center;
